[doc] Fix ~/.config/oil -> oils in getting-started
And man page

Addresses #1687

--- a/doc/osh.1
+++ b/doc/osh.1
@@ -49,7 +49,7 @@ What format the AST should be in.
 .El
 .Sh FILES
 The interactive shell only sources
-.Pa ~/.config/oil/oshrc
+.Pa ~/.config/oils/oshrc
 on startup.
 .Sh EXIT STATUS
 The
